BUG FIXES!! Homepage header layout bug, some CSS changes

--- a/NightlifeChope/client/main.css
+++ b/NightlifeChope/client/main.css
@@ -4,23 +4,31 @@ header {
   width: 100%;
   border: 0%;
   padding: 0%;
-  margin: 0% 0% 0% 0%;
+  margin-right: 0%;
+  margin-left: 0%;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  display: inline-block;
+}
+
+body h1 {
+  font-size: 2em;
+  font-style: normal;
+  color: deep-purple;
   display: inline-block;
 }
 
 #site-logo {
-  float: left;
-  font-size: 1.5em;
+  font-size: 4em;
   font-style: normal;
   color: white;
   border: 0%;
   padding: 0%;
-  margin: 0% 0% 0% 0%;
-  display: inline-block;
-}
-
-nav #loginButtons {
-  float: right;
+  height: 1%;
+  margin-right: 0%;
+  margin-left: 1%;
+  margin-top: 0%;
+  margin-bottom: 0%;
   display: block;
 }
 
@@ -28,6 +36,20 @@ header navbar {
   width: 100%;
   border: 1%;
   padding: 0.5%;
-  margin: 0%;
-  display: inline-block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  display: block;
+}
+
+/* main part of the webpage, the part that changes */
+#__blaze-root {
+  border: 0%;s
+  padding: 2%;
+  margin-right: 1%;
+  margin-left: 1%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  display: block;
 }
